Inclusion TreeView dans la page d'exemple de supervision Correction CSS dans le collapse pour ne pas masquer le toggle de gauche quand tout est déplié

--- a/app/assets/css/_global.styl
+++ b/app/assets/css/_global.styl
@@ -253,6 +253,10 @@ input[type=number]:invalid {
   padding-left: 23px!important;
 }
 
+.collapse-left .collapse-body .collapse-right.collapse-expanded{
+  margin-left: 0!important;
+}
+
 // Contenu de la sidebar left
 .collapse-sidebar-left .sidebar-content{
   padding: 5px;
@@ -346,4 +350,29 @@ fait toute la largeur du bloc de sidebar */
 }
 
 .flex-footer{
+}
+
+
+/*
+|--------------------------------------------------------------------------
+| REACT BOOTSTRAP TREEVIEW
+|--------------------------------------------------------------------------
+*/
+.treeview .list-group-item {
+  cursor: pointer;
+}
+
+.treeview span {
+  width: 1rem;
+  height: 1rem;
+}
+
+.treeview span.indent {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.treeview span.icon {
+  margin-left: 10px;
+  margin-right: 5px;
 }
